# intel-8008

./: .gitignore  .gitmodules  README.md
emulate8008/: CMakeLists.txt
emulate8008/inc/: buses.hpp  instructions.hpp  intel8008.hpp  rom_kernel.hpp  scelbi.hpp
emulate8008/src/: emulator.cpp  intel8008.cpp  scelbi.cpp
emulate8008/test/: testCpu.cpp
